# tractor_sim

./: README.md  frames.gv  tractor_sim_parameters.xml
documentation/: simulation.md  tractor_sim_parameters.xml
models/olin/meshes/: full_campus.dae
models/sandbox1/: model.sdf
models/terrain_test/: model.config
models/terrain_test/meshes/: terrain_test.dae
tractor_sim/: CMakeLists.txt  package.xml
tractor_sim/launch/: simulation.launch
tractor_sim_description/: CMakeLists.txt  package.xml
tractor_sim_description/launch/: tractor_sim.launch  tractor_sim_rviz.launch  tractor_sim_rviz_amcl.launch
tractor_sim_description/rviz/: amcl.rviz
tractor_sim_description/urdf/: .lidarx.urdf.xacro.swp  kubo.gazebo  kubo.gv  kubo.urdf  kubo.urdf.xacro  kubo_macros.urdf.xacro  kubo_materials.urdf.xacro  lidarx.urdf.xacro
tractor_sim_gazebo/: CMakeLists.txt  package.xml
tractor_sim_gazebo/config/: kubo_ackermann_ctrlr_params.yaml  kubo_joint_ctrlr_params.yaml
tractor_sim_gazebo/launch/: bringup.launch  bringup_min.launch  hitch.launch  sim_odometry.launch  tractor_sim.launch  world.launch
tractor_sim_gazebo/meshes/: Chassis.dae
tractor_sim_gazebo/models/big_asphalt_plane/: model-1_4.sdf  model.config  model.sdf
tractor_sim_gazebo/models/olin/: model.config  model.sdf
tractor_sim_gazebo/models/sandbox1/: model.config
tractor_sim_gazebo/models/terrain_test/: model.sdf
tractor_sim_gazebo/scripts/: ackermann_controller  gazebo_link_pose  hitch.cc  hitch_controller  hitch_controller.py  hitch_plugin.cc
tractor_sim_gazebo/worlds/: gas_station.world  lpb.world  olin.world
